// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ActionableRow > snapshots > card variant 1`] = `
<div
  class="group flex items-start gap-3 transition-colors p-4 bg-card border border-border/60 rounded-lg shadow-sm hover:bg-accent/50"
>
  <div
    class="flex-1 min-w-0"
  >
    <p
      class="text-base font-semibold text-foreground leading-tight truncate"
    >
      Test Card
    </p>
  </div>
  <div
    class="flex items-center gap-2 flex-shrink-0 self-center"
  />
</div>
`;

exports[`ActionableRow > snapshots > row variant / accent=accent 1`] = `
<div
  class="group flex items-start gap-3 transition-colors px-4 py-3.5 bg-card border-b border-border/40 last:border-0 border-l-2 hover:bg-muted/60 border-l-accent"
>
  <div
    class="flex-1 min-w-0"
  >
    <p
      class="text-base font-semibold text-foreground leading-tight truncate"
    >
      Test Row
    </p>
  </div>
  <div
    class="flex items-center gap-2 flex-shrink-0 self-center"
  />
</div>
`;

exports[`ActionableRow > snapshots > row variant / accent=none 1`] = `
<div
  class="group flex items-start gap-3 transition-colors px-4 py-3.5 bg-card border-b border-border/40 last:border-0 border-l-2 hover:bg-muted/60 border-l-transparent"
>
  <div
    class="flex-1 min-w-0"
  >
    <p
      class="text-base font-semibold text-foreground leading-tight truncate"
    >
      Test Row
    </p>
  </div>
  <div
    class="flex items-center gap-2 flex-shrink-0 self-center"
  />
</div>
`;

exports[`ActionableRow > snapshots > row variant / accent=success 1`] = `
<div
  class="group flex items-start gap-3 transition-colors px-4 py-3.5 bg-card border-b border-border/40 last:border-0 border-l-2 hover:bg-muted/60 border-l-success"
>
  <div
    class="flex-1 min-w-0"
  >
    <p
      class="text-base font-semibold text-foreground leading-tight truncate"
    >
      Test Row
    </p>
  </div>
  <div
    class="flex items-center gap-2 flex-shrink-0 self-center"
  />
</div>
`;

exports[`ActionableRow > snapshots > row variant / accent=warning 1`] = `
<div
  class="group flex items-start gap-3 transition-colors px-4 py-3.5 bg-card border-b border-border/40 last:border-0 border-l-2 hover:bg-muted/60 border-l-warning"
>
  <div
    class="flex-1 min-w-0"
  >
    <p
      class="text-base font-semibold text-foreground leading-tight truncate"
    >
      Test Row
    </p>
  </div>
  <div
    class="flex items-center gap-2 flex-shrink-0 self-center"
  />
</div>
`;
